--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cycler==0.12.1
 debugpy==1.8.18
 decorator==5.2.1
 executing==2.2.1
+faster-coco-eval==1.7.0
 filelock==3.20.0
 fonttools==4.61.0
 fsspec==2025.12.0
@@ -20,6 +21,7 @@ Jinja2==3.1.6
 jupyter_client==8.7.0
 jupyter_core==5.9.1
 kiwisolver==1.4.9
+lightning-utilities==0.15.2
 MarkupSafe==3.0.3
 matplotlib==3.10.8
 matplotlib-inline==0.2.1
@@ -27,16 +29,34 @@ mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.6.1
 numpy==2.2.6
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.6.77
 opencv-python==4.12.0.88
 packaging==25.0
 parso==0.8.5
+pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.5.1
 polars==1.36.1
 polars-runtime-32==1.36.1
 prompt_toolkit==3.0.52
 psutil==7.1.3
+ptyprocess==0.7.0
 pure_eval==0.2.3
+pycocotools==2.0.10
 Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
@@ -46,12 +66,14 @@ requests==2.32.5
 scipy==1.16.3
 six==1.17.0
 stack-data==0.6.3
-sympy==1.13.1
-torch==2.6.0+cu124
-torchaudio==2.6.0+cu124
-torchvision==0.21.0+cu124
+sympy==1.14.0
+torch==2.9.1+cu126
+torchmetrics==1.8.2
+torchvision==0.24.1+cu126
 tornado==6.5.3
+tqdm==4.67.1
 traitlets==5.14.3
+triton==3.5.1
 typing_extensions==4.15.0
 ultralytics==8.3.237
 ultralytics-thop==2.0.18
